# ChangeLog for dev-libs/libburn
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libburn/ChangeLog,v 1.113 2012/05/04 18:35:46 jdhore Exp $

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> libburn-1.0.0.ebuild,
  libburn-1.1.8.ebuild, libburn-1.2.0.ebuild, libburn-1.2.2.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  01 May 2012; Agostino Sarubbo <ago@gentoo.org> libburn-1.2.2.ebuild:
  Stable for amd64, wrt bug #414159

*libburn-1.2.2 (07 Apr 2012)

  07 Apr 2012; Daniel Pielmeier <billie@gentoo.org> +libburn-1.2.2.ebuild:
  Version bump.

  13 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> libburn-1.1.8.ebuild:
  ppc/ppc64/x86 stable wrt #400017

  10 Mar 2012; Daniel Pielmeier <billie@gentoo.org> libburn-1.2.0.ebuild,
  metadata.xml:
  Introduce cdio use flag now that libcdio-0.83 is available.

  08 Feb 2012; Markus Meier <maekke@gentoo.org> libburn-1.1.8.ebuild:
  arm stable, bug #400017

  08 Feb 2012; Jeroen Roovers <jer@gentoo.org> libburn-1.1.8.ebuild:
  Stable for HPPA (bug #400017).

*libburn-1.2.0 (01 Feb 2012)

  01 Feb 2012; Daniel Pielmeier <billie@gentoo.org> +libburn-1.2.0.ebuild:
  Version bump.

  27 Jan 2012; Agostino Sarubbo <ago@gentoo.org> libburn-1.1.8.ebuild:
  Stable for amd64, wrt bug #400017

  25 Jan 2012; Daniel Pielmeier <billie@gentoo.org> -libburn-1.1.6.ebuild:
  Remove old.

*libburn-1.1.8 (21 Nov 2011)

  21 Nov 2011; Daniel Pielmeier <billie@gentoo.org> -libburn-1.1.4.ebuild,
  +libburn-1.1.8.ebuild:
  Version bump. Remove old.

*libburn-1.1.6 (18 Oct 2011)

  18 Oct 2011; Daniel Pielmeier <billie@gentoo.org> +libburn-1.1.6.ebuild:
  Version bump.

*libburn-1.1.4 (08 Aug 2011)

  08 Aug 2011; Daniel Pielmeier <billie@gentoo.org> -libburn-1.1.0.ebuild,
  +libburn-1.1.4.ebuild:
  Version bump. Remove old.

*libburn-1.1.0 (19 Jun 2011)

  19 Jun 2011; Daniel Pielmeier <billie@gentoo.org> -libburn-1.0.6.ebuild,
  +libburn-1.1.0.ebuild: