@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libburn/libburn-1.2.2.ebuild,v 1.3 2012/05/04 18:35:46 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libburn/libburn-1.2.2.ebuild,v 1.4 2012/05/05 09:09:56 maekke Exp $
 
 EAPI=4
 
@@ -10,7 +10,7 @@ SRC_URI="http://files.libburnia-project.org/releases/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha amd64 ~arm ~hppa ~ppc ~ppc64 ~x86"
+KEYWORDS="~alpha amd64 arm ~hppa ~ppc ~ppc64 ~x86"
 IUSE="cdio debug static-libs track-src-odirect"
 
 RDEPEND="cdio? ( >=dev-libs/libcdio-0.83 )"
