@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libisoburn
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libisoburn/ChangeLog,v 1.86 2012/05/04 18:35:44 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libisoburn/ChangeLog,v 1.87 2012/05/05 09:13:45 maekke Exp $
+
+  05 May 2012; Markus Meier <maekke@gentoo.org> libisoburn-1.2.2.ebuild:
+  arm stable, bug #414159
 
   04 May 2012; Jeff Horelick <jdhore@gentoo.org> libisoburn-1.0.0.ebuild,
   libisoburn-1.1.8.ebuild, libisoburn-1.2.0.ebuild, libisoburn-1.2.2.ebuild:
