@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libisofs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libisofs/ChangeLog,v 1.100 2012/05/04 18:35:43 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libisofs/ChangeLog,v 1.101 2012/05/05 09:11:57 maekke Exp $
+
+  05 May 2012; Markus Meier <maekke@gentoo.org> libisofs-1.2.2.ebuild:
+  arm stable, bug #414159
 
   04 May 2012; Jeff Horelick <jdhore@gentoo.org> libisofs-1.0.0.ebuild,
   libisofs-1.1.6.ebuild, libisofs-1.2.0.ebuild, libisofs-1.2.2.ebuild:
